# elliott_wave_bot

./: .dockerignore  .env.example  .gitignore  DEVELOP.md  Dockerfile  README.md  STEP10_TESTING_AND_SIGNAL_QUALITY.md  STEP2_ARCHITECTURE.md  STEP3_DATA_MODEL.md  STEP4_MARKET_DATA_LAYER.md  STEP7_TELEGRAM_SCENARIOS.md  STEP9_STATE_AND_LOGGING.md  pyproject.toml
dev_steps_docs/: STEP1_FUNCTIONAL_SPEC.md  STEP4_MARKET_DATA_LAYER.md  STEP5_WAVE_SEARCH_ENGINE.md  STEP6_FIBONACCI_VALIDATION.md  STEP8_NOTIFICATIONS_AND_VISUALIZATION.md
src/elliott_bot/: __init__.py  __main__.py  app.py
src/elliott_bot/domain/: __init__.py  models.py
src/elliott_bot/integrations/: __init__.py  binance_provider.py  coinmarketcap_provider.py
src/elliott_bot/interfaces/: __init__.py
src/elliott_bot/orchestration/: __init__.py  monitoring_coordinator.py
src/elliott_bot/services/: __init__.py  application_context.py  chart_rendering_service.py  elliott_validation_service.py  extremum_detection_service.py  manual_check_service.py  market_data_service.py  market_universe_service.py  notification_message_service.py  runtime_state_service.py  series_preparation_service.py  settings_service.py  signal_history_service.py  signal_quality_service.py  symbol_mapping_service.py  watchlist_service.py  wave_analysis_service.py
src/elliott_bot/shared/: __init__.py  config.py  (+1 more)
tests/: test_elliott_validation_service.py  test_market_data_layer.py  test_signal_quality_service.py  test_state_services.py  test_telegram_ui.py  test_visualization_and_notifications.py  test_wave_analysis_pipeline.py
(+8 files in other folders)
