[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elliott-bot"
version = "0.1.0"
description = "Telegram bot for Elliott wave monitoring on crypto markets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13,<4.0",
    "aiohttp>=3.10,<4.0",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
